# ferrous-focus

./: .gitignore  Cargo.toml  LICENSE  README.md  frontapp.applescript
.github/workflows/: ci.yml  publish.yml
examples/: advanced.rs  async.rs  async_thread_safe.rs  basic.rs  focus_change_subscription.rs  focused_icon_tracking.rs  simple_focus_tracking.rs  spawn_window.rs  third_party_example.rs
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
scripts/: README.md  start_wayland_headless.sh  start_x11_headless.sh  stop_wayland_headless.sh
src/: config.rs  error.rs  focus_tracker.rs  focused_window.rs  lib.rs
src/linux/: impl_focus_tracker.rs  mod.rs  utils.rs  wayland_focus_tracker.rs  xorg_focus_tracker.rs
src/macos/: impl_focus_tracker.rs  mod.rs  utils.rs
src/windows/: impl_focus_tracker.rs  mod.rs  utils.rs
tests/: focus_change_detection.rs  icon_validation.rs  integration_basic.rs  permission_fallback.rs  util.rs
