[package]
name = "ferrous-focus"
version = "0.1.0"
edition = "2024"
authors = ["Europa Labs <contact@eurora-labs.com>"]
license = "Apache-2.0"
description = "Cross-platform focus tracker for Linux (X11), macOS and Windows"
homepage = "https://github.com/eurora-labs/ferrous-focus"
repository = "https://github.com/eurora-labs/ferrous-focus.git"
keywords = [
    "focus",
    "focus-tracker",
    "window-focus-tracker",
    "window-focus",
    "monitor",
    "desktop",
    "window",
    "application",
    "window-manager",
]

[workspace]
members = ["."]
resolver = "2"

[dependencies]
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
] }
