[package]
name = "ferrous-focus"
version = "0.5.0"
edition = "2024"
authors = ["Eurora Labs <contact@eurora-labs.com>"]
license = "Apache-2.0"
description = "Cross-platform focus tracker for Linux (X11), macOS and Windows"
homepage = "https://github.com/eurora-labs/ferrous-focus"
repository = "https://github.com/eurora-labs/ferrous-focus.git"
keywords = [
    "focus-tracker",
    "window-focus-tracker",
    "desktop",
    "application",
    "window-manager",
]

[workspace]
members = ["."]
resolver = "2"

[dependencies]
thiserror = "2.0.12"
tracing = "0.1.41"
image = "0.25.2"
base64 = "0.22"

# Optional async dependencies
tokio = { version = "1", features = [
    "time",
    "rt",
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "sync",
], optional = true }


[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13.1"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
cocoa = "0.26.1"
core-foundation = "0.10.1"
core-graphics = "0.25"
accessibility-sys = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
] }

[dev-dependencies]
tracing-subscriber = "0.3.19"
serial_test = "3.1.1"
image = "0.25.2"
winit = "0.30.5"
ctrlc = "3.4.5"
base64 = "0.22"
[features]
async = ["tokio"]
